# intelligent_doc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pr.yml
docs/: ARCHITECTURE.md  PHASE1_WALKTHROUGH.md  PHASE2_WALKTHROUGH.md  PHASE3_WALKTHROUGH.md  PHASE4_WALKTHROUGH.md  PHASE5_WALKTHROUGH.md  PHASE6_WALKTHROUGH.md  PHASE7_WALKTHROUGH.md  PHASE8_WALKTHROUGH.md  PROJECT_STATS.md  TEST_SUMMARY.md  WORK_SUMMARY.md
scripts/: deploy_gcp.sh  run_eval.py
src/: config.py  main.py
src/api/: auth.py  rate_limiter.py  routes_admin.py  routes_documents.py  routes_extract.py  routes_query.py  stores.py  websocket.py
src/chunking/: chunk_optimizer.py  chunker.py
src/evaluation/: benchmarks.py  extraction_eval.py  qa_eval.py  retrieval_eval.py
src/ingestion/: layout_analyzer.py  metadata_extractor.py  pdf_parser.py  table_extractor.py
src/llm/: cache_manager.py  cross_paper.py  degradation.py  extractor.py  gemini_client.py  model_router.py  prompts.py  qa_engine.py  summarizer.py
src/models/: database.py  schemas.py
src/monitoring/: cost_tracker.py  metrics.py
src/retrieval/: bm25_index.py  embedding_service.py  hybrid_retriever.py  query_processor.py  reranker.py  vector_store.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/fixtures/: extraction_test_set.json  retrieval_test_set.json
tests/integration/: test_docker_health.py  test_full_pipeline.py  test_upload_pipeline.py
tests/unit/: test_auth.py  test_bm25_index.py  test_cache_manager.py  test_chunker.py  test_cost_tracker.py  test_cross_paper.py  test_degradation.py  test_embedding_service.py  test_extraction_eval.py  test_extractor.py  test_gemini_client.py  test_hybrid_retriever.py  test_layout_analyzer.py  test_metadata_extractor.py  test_model_router.py  test_pdf_parser.py  test_qa_engine.py  test_qa_eval.py  test_query_processor.py  test_rate_limiter.py  test_reranker.py  test_retrieval_eval.py  test_routes_documents.py  test_routes_query.py  test_summarizer.py  test_table_extractor.py  test_vector_store.py
